# brazilian-stocks

./: .gitignore  .pre-commit-config.yaml  .pylintrc  exemplo.py  locals.tf  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-feature.yml  ci-tf-module-releaser.yml
app/src/get_active_tickers/domain/entities/: ticker.py
app/src/get_active_tickers/domain/interfaces/: adapters_interface.py  repositories_interface.py
app/src/get_active_tickers/infra/adapters/: fundamentus_adapter.py  requests_adapter.py
app/src/get_active_tickers/infra/repositories/: dynamodb_repository.py
app/src/get_active_tickers/presentation/: save_tickers_info_presentation.py
app/src/get_active_tickers/tests/: conftest.py  test_dynamodb_repository.py  test_fundamentus_adapter.py  test_requests_adapter.py
app/src/get_active_tickers/tests/mocks/: mocked_entity_ticker.py  mocked_fundamentus_adapter.py
app/src/get_active_tickers/usecases/: save_tickers_info_usecase.py
