[project]
name = "brazilian-stocks"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Panini",email = "panini.development@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "brazilian_stocks", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
